Enhance development setup and update content: Added port configuration for local server, introduced npm scripts for build and development, cleared author meta tag, and updated video section text for improved clarity and marketing appeal.

--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
         "url": "https://github.com/app-generator/design-core"
     },
     "license": "https://github.com/app-generator/design-core/blob/master/LICENSE.md",
+    "scripts": {
+        "build": "gulp prod",
+        "dev": "gulp serve",
+        "start": "gulp serve"
+    },
     "dependencies": {
         "@popperjs/core": "^2.9.2",
         "bootstrap": "^5.0.2"
     },
     "devDependencies": {
-        "sass": "^1.47.0",
         "browser-sync": "^2.27.4",
         "del": "^6.0.0",
         "gulp": "^4.0.2",
@@ -39,6 +43,8 @@
         "gulp-sourcemaps": "^3.0.0",
         "gulp-uglify": "^3.0.2",
         "gulp-wait": "^0.0.2",
-        "merge-stream": "^2.0.0"
+        "merge-stream": "^2.0.0",
+        "netlify-cli": "^23.9.5",
+        "sass": "^1.47.0"
     }
 }
